hphp/hack/test/typecheck/array_get_generic_lvalue_array_get.php.exp
File "array_get_generic_lvalue_array_get.php", line 8, characters 10-11:
Invalid return type (Typing[4110])
File "array_get_generic_lvalue_array_get.php", line 6, characters 47-48:
This is a value of generic type Tv
File "array_get_generic_lvalue_array_get.php", line 6, characters 18-22:
It is incompatible with an array (used like a hashtable)
